# TokenAuth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fyras_token_auth/claim_extraction/: auth.py
src/: main.py
src/core/: claim_extraction.py
src/routers/: validation_routers.py
src/schemas/: claims_response.py
tests/: test_auth.py
token_auth/claim_extraction/: auth.py
token_auth/schemas/: claims_response.py
token_auth/tests/: test_auth.py
