[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fyras-token-auth"
version = "0.1.0"
description = "AAD Token Validation Library for Fyras microservices"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "pyjwt>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fyras_token_auth*"]
